--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,10 @@
         <p id="cart-total"></p>
         {% if user.is_authenticated %}
         <a class="p-2 text-dark" href="" style="text-decoration: none;">Profile</a>
-        <a class="p-2 text-dark" href="{% url 'logout' %}" style="text-decoration: none;">Log Out</a>
+        <form method="post" action="{% url 'logout' %}">
+          {% csrf_token %}
+          <button class="btn btn-outline ml-2" type="submit">Logout</button>
+        </form>
         {% else %}
         <a class="p-2 text-dark" href="{% url 'login' %}" style="text-decoration: none;">Log In</a>
         <a class="btn btn-outline-primary" href="{% url 'signup' %}">Sign Up</a>
