--- a/templates/innovacare/admin_add_physician.html
+++ b/templates/innovacare/admin_add_physician.html
@@ -1,4 +1,4 @@
-{% extends 'admin_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -54,7 +54,7 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>Add New Doctor To Hospital</p>
+        <p>Add New Physician</p>
       </div>
       <div class="form-content">
         <div class="row">
