--- a/templates/innovacare/admin_dashboard_cards.html
+++ b/templates/innovacare/admin_dashboard_cards.html
@@ -140,9 +140,9 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
-          <h3>{{doctorcount}}</h3>
-          <h4>Total Doctor</h4>
-          <p>Approval Required : {{pendingdoctorcount}}</p>
+          <h3>{{physiciancount}}</h3>
+          <h4>Total Physician</h4>
+          <p>Approval Required : {{pendingphysiciancount}}</p>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-user-md"></i>
@@ -153,9 +153,9 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
-          <h3>{{patientcount}}</h3>
-          <h4>Total Patient</h4>
-          <p>Wants to Admit : {{pendingpatientcount}}</p>
+          <h3>{{clientcount}}</h3>
+          <h4>Total Client</h4>
+          <p>Wants to Admit : {{pendingclientcount}}</p>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-user-o"></i>
