--- a/templates/innovacare/physician_dashboard.html
+++ b/templates/innovacare/physician_dashboard.html
@@ -1,7 +1,7 @@
-{% extends 'doctor_base.html' %}
+{% extends 'innovacare/physician_base.html' %}
 {% load static %}
 {% block content %}
-{%include 'doctor_dashboard_cards.html'%}
+{%include 'innovacare/physician_dashboard_cards.html'%}
 <br><br><br><br>
 <div class="container">
   <div class="row">
