--- a/templates/innovacare/physician_dashboard_cards.html
+++ b/templates/innovacare/physician_dashboard_cards.html
@@ -141,7 +141,7 @@
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
           <h3>{{appointmentcount}}</h3>
-          <h4>Appointments For You</h4>
+          <h4>Appointments</h4>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-calendar"> </i>
@@ -152,8 +152,8 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
-          <h3>{{patientcount}}</h3>
-          <h4>Patient Under You</h4>
+          <h3>{{clientcount}}</h3>
+          <h4>Assigned Client</h4>
 
         </div>
         <div class="col-md-4 market-update-right">
@@ -165,8 +165,8 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-3">
         <div class="col-md-8 market-update-left">
-          <h3>{{patientdischarged}}</h3>
-          <h4>Your Patient Discharged</h4>
+          <h3>{{clientdischarged}}</h3>
+          <h4>Client Discharged</h4>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-check-circle-o" aria-hidden="true"></i>
