--- a/templates/innovacare/admin_appointment.html
+++ b/templates/innovacare/admin_appointment.html
@@ -1,4 +1,4 @@
-{% extends 'hadmin_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% load static %}
 {% block content %}
 <br><br>
@@ -77,7 +77,7 @@
     <div class="col-md-4 col-xl-4">
       <div class="card bg-c-blue order-card">
         <div class="card-block">
-          <a href="/admin-view-appointment">
+          <a href="{% url 'admin-view-appointment' %}">
             <h6 class="m-b-20">View Appointment</h6>
           </a>
           <br>
