--- a/templates/innovacare/admin_approve_physician.html
+++ b/templates/innovacare/admin_approve_physician.html
@@ -1,4 +1,4 @@
-{% extends 'doctor_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% block content %}
 {%load static%}
 
@@ -6,7 +6,6 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
   <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
   <style media="screen">
     a:link {
       text-decoration: none;
@@ -21,34 +20,39 @@
     }
   </style>
 </head>
+
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Your Appointments</h6>
+      <h6 class="panel-title">Physicians &nbsp Applied For Registration</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-          <th>Patient Name</th>
-          <th>Picture</th>
-          <th>Description</th>
+          <th>Name</th>
+          <th>Profile Picture</th>
           <th>Mobile</th>
           <th>Address</th>
-          <th>Appointment Date</th>
+          <th>Department</th>
+          <th>Approve</th>
+          <th>Reject</th>
         </tr>
       </thead>
-      {% for a,p in appointments %}
+      {% for p in physicians %}
       <tr>
-        <td>{{a.patientName}}</td>
+        <td> {{p.get_name}}</td>
         <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
-        <td>{{a.description}}</td>
         <td>{{p.mobile}}</td>
         <td>{{p.address}}</td>
-        <td>{{a.appointmentDate}}</td>
+        <td>{{p.department}}</td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'approve-doctor' p.id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'reject-doctor' p.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
     </table>
   </div>
+
+
 </div>
 
 {% endblock content %}
