--- a/templates/innovacare/admin_base.html
+++ b/templates/innovacare/admin_base.html
@@ -280,8 +280,8 @@
     </header>
     <ul>
       <li tabindex="0" class="icon-dashboard"> <a style="color:white; text-decoration:none;" href="{% url 'admin-dashboard' %}"><span>Dashboard</span></a> </li>
-      <li tabindex="0" class="icon-customers"> <a style="color:white; text-decoration:none;" href="{% url 'admin-doctor' %}"><span>Doctor</span></a></li>
-      <li tabindex="0" class="icon-users"> <a style="color:white; text-decoration:none;" href="{% url 'admin-patient' %}"><span>Patient</span></a></li>
+      <li tabindex="0" class="icon-customers"> <a style="color:white; text-decoration:none;" href="{% url 'admin-physician' %}"><span>Physician</span></a></li>
+      <li tabindex="0" class="icon-users"> <a style="color:white; text-decoration:none;" href="{% url 'admin-client' %}"><span>Client</span></a></li>
       <li tabindex="0" class="icon-calendar"> <a style="color:white; text-decoration:none;" href="{% url 'admin-appointment' %}"><span>Appointment</span></a></li>
     </ul>
   </nav>
@@ -299,7 +299,10 @@
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
           <div class="navbar-nav" style=" margin-left: 90%;">
 
-            <a href="{% url 'logout' %}" class="nav-item nav-link">Logout</a>
+            <form method="post" action="{% url 'logout' %}">
+              {% csrf_token %}
+              <button class="btn btn-outline ml-2" type="submit">Logout</button>
+            </form>
           </div>
         </div>
       </nav>
