--- a/templates/innovacare/admin_physician.html
+++ b/templates/innovacare/admin_physician.html
@@ -1,12 +1,10 @@
-{% extends 'admin_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% load static %}
 {% block content %}
 <br><br>
 
 <head>
   <meta charset="utf-8">
-
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
@@ -81,11 +79,11 @@
     <div class="col-md-4 col-xl-3">
       <div class="card bg-c-blue order-card">
         <div class="card-block">
-          <a href="/admin-view-patient">
-            <h6 class="m-b-20">Patient Record</h6>
+          <a href="{% url 'admin-view-physician' %}">
+            <h6 class="m-b-20">Physician Record</h6>
           </a>
           <br>
-          <h2 class="text-right"><i class="fas fa-user-injured f-left"></i></h2>
+          <h2 class="text-right"><i class="fas fa-user-nurse f-left"></i></h2>
 
         </div>
       </div>
@@ -94,8 +92,8 @@
     <div class="col-md-4 col-xl-3">
       <div class="card bg-c-green order-card">
         <div class="card-block">
-          <a href="/admin-add-patient">
-            <h6 class="m-b-20">Admit Patient</h6>
+          <a href="{% url 'admin-add-physician' %}">
+            <h6 class="m-b-20">Register Physician</h6>
           </a>
           <br>
           <h2 class="text-right"><i class="fas fa-user-plus f-left"></i></h2>
@@ -106,8 +104,8 @@
     <div class="col-md-4 col-xl-3">
       <div class="card bg-c-yellow order-card">
         <div class="card-block">
-          <a href="/admin-approve-patient">
-            <h6 class="m-b-20">Approve Patient</h6>
+          <a href="{% url 'admin-approve-physician' %}">
+            <h6 class="m-b-20">Approve Physician</h6>
           </a>
           <br>
           <h2 class="text-right"><i class="fas fa-check-circle f-left"></i></h2>
@@ -118,11 +116,11 @@
     <div class="col-md-4 col-xl-3">
       <div class="card bg-c-pink order-card">
         <div class="card-block">
-          <a href="/admin-discharge-patient">
-            <h6 class="m-b-20">Discharge Patient</h6>
+          <a href="{% url 'admin-view-physician-specialisation' %}">
+            <h6 class="m-b-20">Physician Specialisation</h6>
           </a>
           <br>
-          <h2 class="text-right"><i class="fas fa-eject f-left"></i></h2>
+          <h2 class="text-right"><i class="fas fa-user-md f-left"></i></h2>
         </div>
       </div>
     </div>
