--- a/templates/innovacare/admin_view_physician_specialisation.html
+++ b/templates/innovacare/admin_view_physician_specialisation.html
@@ -1,6 +1,5 @@
-{% extends 'doctor_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% block content %}
-{%load static%}
 
 <head>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -24,29 +23,21 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Your Discharged Patient List</h6>
+      <h6 class="panel-title">Department & Physician</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-          <th>Name</th>
-
-          <th>Admit Date</th>
-          <th>Release Date</th>
-          <th>Symptoms</th>
+          <th>Department</th>
+          <th>Physician's Name</th>
           <th>Mobile</th>
-          <th>Address</th>
-
         </tr>
       </thead>
-      {% for p in dischargedpatients %}
+      {% for p in physicians %}
       <tr>
-        <td> {{p.patientName}}</td>
-        <td>{{p.admitDate}}</td>
-        <td>{{p.releaseDate}}</td>
-        <td>{{p.symptoms}}</td>
+        <td>{{p.department}}</td>
+        <td> {{p.get_name}}</td>
         <td>{{p.mobile}}</td>
-        <td>{{p.address}}</td>
       </tr>
       {% endfor %}
     </table>
