--- a/templates/innovacare/doctor_wait_for_approval.html
+++ b/templates/innovacare/doctor_wait_for_approval.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  {% include "hospital/navbar.html" %}
+  {% include "innovacare/navbar.html" %}
   <br>
   <br>
 
@@ -37,10 +37,13 @@
     <hr class="my-4">
     <p>Check Later</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="/logout" role="button">Logout For Now</a>
+      <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button class="btn btn-outline ml-2" type="submit">Logout</button>
+      </form>
     </p>
   </div>
 
-  {% include "hospital/footer.html" %}
+  {% include "innovacare/footer.html" %}
 </body>
 </html>
