--- a/templates/innovacare/physician_delete_appointment.html
+++ b/templates/innovacare/physician_delete_appointment.html
@@ -1,4 +1,4 @@
-{% extends 'doctor_base.html' %}
+{% extends 'innovacare/physician_base.html' %}
 {% block content %}
 {%load static%}
 
@@ -24,26 +24,23 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Your Total Patient List</h6>
+      <h6 class="panel-title">Delete Your Appointments</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Profile Picture</th>
-          <th>Symptoms</th>
-          <th>Mobile</th>
-          <th>Address</th>
-
+          <th>Patient Name</th>
+          <th>Picture</th>
+          <th>Description</th>
+          <th>Delete</th>
         </tr>
       </thead>
-      {% for p in patients %}
+      {% for a,p in appointments %}
       <tr>
-        <td> {{p.get_name}}</td>
+        <td>{{a.patientName}}</td>
         <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
-        <td>{{p.symptoms}}</td>
-        <td>{{p.mobile}}</td>
-        <td>{{p.address}}</td>
+        <td>{{a.description}}</td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-appointment' a.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
     </table>
