--- a/templates/innovacare/physician_view_discharge_client.html
+++ b/templates/innovacare/physician_view_discharge_client.html
@@ -1,4 +1,4 @@
-{% extends 'admin_base.html' %}
+{% extends 'innovacare/physician_base.html' %}
 {% block content %}
 {%load static%}
 
@@ -24,31 +24,29 @@
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel-heading">
-      <h6 class="panel-title">Doctors</h6>
+      <h6 class="panel-title">Discharged Client List</h6>
     </div>
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-
           <th>Name</th>
-          <th>Profile Picture</th>
+
+          <th>Admit Date</th>
+          <th>Release Date</th>
+          <th>Symptoms</th>
           <th>Mobile</th>
           <th>Address</th>
-          <th>Department</th>
-          <th>Update</th>
-          <th>Delete</th>
+
         </tr>
       </thead>
-      {% for d in doctors %}
+      {% for p in dischargedpatients %}
       <tr>
-
-        <td> {{d.get_name}}</td>
-        <td> <img src="{% static d.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
-        <td>{{d.mobile}}</td>
-        <td>{{d.address}}</td>
-        <td>{{d.department}}</td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'update-doctor' d.id  %}"><span class="glyphicon glyphicon-edit"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'delete-doctor-from-hospital' d.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td> {{p.patientName}}</td>
+        <td>{{p.admitDate}}</td>
+        <td>{{p.releaseDate}}</td>
+        <td>{{p.symptoms}}</td>
+        <td>{{p.mobile}}</td>
+        <td>{{p.address}}</td>
       </tr>
       {% endfor %}
     </table>
