--- a/templates/innovacare/client_dashboard_cards.html
+++ b/templates/innovacare/client_dashboard_cards.html
@@ -145,8 +145,8 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
-          <h3>{{doctorName}}</h3>
-          <h4>Doctor Name</h4>
+          <h3>{{physicianName}}</h3>
+          <h4>Physician's Name</h4>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-user-o"> </i>
@@ -169,8 +169,8 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-3">
         <div class="col-md-8 market-update-left">
-          <h3>{{doctorMobile}}</h3>
-          <h4>Doctor Mobile</h4>
+          <h3>{{physicianMobile}}</h3>
+          <h4>Physician's Mobile</h4>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-mobile" aria-hidden="true"></i>
@@ -185,8 +185,8 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-1">
         <div class="col-md-8 market-update-left">
-          <h3>{{doctorAddress}}</h3>
-          <h4>Doctor Address</h4>
+          <h3>{{physicianAddress}}</h3>
+          <h4>Physician's Address</h4>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-map-marker"> </i>
@@ -197,8 +197,8 @@
     <div class="col-md-4 market-update-gd">
       <div class="market-update-block clr-block-2">
         <div class="col-md-8 market-update-left">
-          <h3>{{doctorDepartment}}</h3>
-          <h4>Doctor Department</h4>
+          <h3>{{physicianDepartment}}</h3>
+          <h4>Physician's Department</h4>
         </div>
         <div class="col-md-4 market-update-right">
           <i class="fa fa-list-alt"></i>
