--- a/templates/innovacare/patient_discharge.html
+++ b/templates/innovacare/patient_discharge.html
@@ -1,4 +1,4 @@
-{% extends 'innovacare/patient_base.html' %}
+{% extends 'innovacare/client_base.html' %}
 {% load static %}
 {% block content %}
 
@@ -120,7 +120,7 @@
         <table>
           <tr>
             <td class="title">
-              <h1>Hospital Management</h1>
+              <h1>InnovaCare</h1>
             </td>
 
             <td>
@@ -139,7 +139,7 @@
         <table>
           <tr>
             <td>
-              Patient Name : {{patientName}}<br>
+              Patient Name : {{clientName}}<br>
               Patient Mobile : {{mobile}}<br>
               Patient Addres : {{address}}<br>
             </td>
