--- a/templates/innovacare/admin_add_appointment.html
+++ b/templates/innovacare/admin_add_appointment.html
@@ -1,4 +1,4 @@
-{% extends 'admin_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -59,15 +59,14 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
+              {% render_field appointmentForm.physicianId class="form-control" placeholder="Physician" %}
+            </div>
+            <div class="form-group">
+              {% render_field appointmentForm.clientId class="form-control" placeholder="Client" %}
+            </div>
+            <div class="form-group">
               {% render_field appointmentForm.description class="form-control" placeholder="Description" %}
             </div>
-            <div class="form-group">
-              {% render_field appointmentForm.doctorId class="form-control" placeholder="doctor" %}
-            </div>
-            <div class="form-group">
-              {% render_field appointmentForm.patientId class="form-control" placeholder="patient" %}
-            </div>
-
           </div>
 
         </div>
