--- a/templates/innovacare/admin_add_client.html
+++ b/templates/innovacare/admin_add_client.html
@@ -1,4 +1,4 @@
-{% extends 'admin_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -48,13 +48,13 @@
 
 </head>
 <br><br><br>
-<!------ signup page for doctor by admin(sumit)  ---------->
+<!------ signup page for physician by admin ---------->
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>Admit Patient To Hospital</p>
+        <p>Add Client</p>
       </div>
       <div class="form-content">
         <div class="row">
@@ -66,13 +66,13 @@
               {% render_field userForm.username class="form-control" placeholder="Username" %}
             </div>
             <div class="form-group">
-              {% render_field patientForm.address class="form-control" placeholder="Address" %}
+              {% render_field clientForm.address class="form-control" placeholder="Address" %}
             </div>
             <div class="form-group">
-              {% render_field patientForm.symptoms class="form-control" placeholder="Symptoms" %}
+              {% render_field clientForm.symptoms class="form-control" placeholder="Symptoms" %}
             </div>
             <div class="form-group">
-              {% render_field patientForm.profile_pic required="required" class="form-control" placeholder="Profile Picture" %}
+              {% render_field clientForm.profile_pic required="required" class="form-control" placeholder="Profile Picture" %}
             </div>
           </div>
           <div class="col-md-6">
@@ -83,14 +83,14 @@
               {% render_field userForm.password class="form-control" placeholder="Password" %}
             </div>
             <div class="form-group">
-              {% render_field patientForm.mobile  class="form-control" placeholder="Mobile" %}
+              {% render_field clientForm.mobile  class="form-control" placeholder="Mobile" %}
             </div>
             <div class="form-group">
-              {% render_field patientForm.assignedDoctorId class="form-control" placeholder="Doctor" %}
+              {% render_field clientForm.assignedPhysicianId class="form-control" placeholder="Physician" %}
             </div>
           </div>
         </div>
-        <button type="submit" class="btnSubmit">Admit</button>
+        <button type="submit" class="btnSubmit">Add</button>
       </div>
     </div>
   </div>
