--- a/templates/innovacare/admin_approve_appointment.html
+++ b/templates/innovacare/admin_approve_appointment.html
@@ -1,4 +1,4 @@
-{% extends 'admin_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% block content %}
 
 <head>
@@ -27,8 +27,8 @@
     <table class="table table-hover" id="dev-table">
       <thead>
         <tr>
-          <th>Doctor Name</th>
-          <th>Patient Name</th>
+          <th>Physician's Name</th>
+          <th>Client's Name</th>
           <th>Description</th>
           <th>Date</th>
           <th>Approve</th>
@@ -37,8 +37,8 @@
       </thead>
       {% for a in appointments %}
       <tr>
-        <td> {{a.doctorName}}</td>
-        <td>{{a.patientName}}</td>
+        <td> {{a.physicianName}}</td>
+        <td>{{a.clientName}}</td>
         <td>{{a.description}}</td>
         <td>{{a.appointmentDate}}</td>
         <td><a class="btn btn-primary btn-xs" href="{% url 'approve-appointment' a.id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
