--- a/templates/innovacare/admin_client.html
+++ b/templates/innovacare/admin_client.html
@@ -94,7 +94,7 @@
     <div class="col-md-4 col-xl-3">
       <div class="card bg-c-green order-card">
         <div class="card-block">
-          <a href="/admin-add-patient">
+          <a href="{% url 'admin-add-client' %}">
             <h6 class="m-b-20">Admit Patient</h6>
           </a>
           <br>
@@ -106,8 +106,8 @@
     <div class="col-md-4 col-xl-3">
       <div class="card bg-c-yellow order-card">
         <div class="card-block">
-          <a href="/admin-approve-patient">
-            <h6 class="m-b-20">Approve Patient</h6>
+          <a href="{% url 'admin-approve-client' %}">
+            <h6 class="m-b-20">Approve Client</h6>
           </a>
           <br>
           <h2 class="text-right"><i class="fas fa-check-circle f-left"></i></h2>
@@ -118,8 +118,8 @@
     <div class="col-md-4 col-xl-3">
       <div class="card bg-c-pink order-card">
         <div class="card-block">
-          <a href="/admin-discharge-patient">
-            <h6 class="m-b-20">Discharge Patient</h6>
+          <a href="{% url 'admin-discharge-client' %}">
+            <h6 class="m-b-20">Discharge Client</h6>
           </a>
           <br>
           <h2 class="text-right"><i class="fas fa-eject f-left"></i></h2>
