--- a/templates/innovacare/patient_appointment.html
+++ b/templates/innovacare/patient_appointment.html
@@ -1,4 +1,4 @@
-{% extends 'innovacare/patient_base.html' %}
+{% extends 'innovacare/client_base.html' %}
 {% load static %}
 {% block content %}
 <br><br>
@@ -77,7 +77,7 @@
     <div class="col-md-4 col-xl-6">
       <div class="card bg-c-blue order-card">
         <div class="card-block">
-          <a href="/patient-view-appointment">
+          <a href="{% url 'client-view-appointment' %}">
             <h6 class="m-b-20">View Your Appointment</h6>
           </a>
           <br>
@@ -90,7 +90,7 @@
     <div class="col-md-4 col-xl-6">
       <div class="card bg-c-green order-card">
         <div class="card-block">
-          <a href="/patient-book-appointment">
+          <a href="{% url 'client-book-appointment' %}">
             <h6 class="m-b-20">Book Appointment</h6>
           </a>
           <br>
