--- a/templates/innovacare/patient_wait_for_approval.html
+++ b/templates/innovacare/patient_wait_for_approval.html
@@ -36,7 +36,10 @@
     <hr class="my-4">
     <p>Check Later</p>
     <p class="lead">
-      <a class="btn btn-primary btn-lg" href="/logout" role="button">Logout For Now</a>
+      <form method="post" action="{% url 'logout' %}">
+        {% csrf_token %}
+        <button class="btn btn-outline ml-2" type="submit">Logout</button>
+      </form>
     </p>
   </div>
 
