--- a/templates/innovacare/admin_update_physician.html
+++ b/templates/innovacare/admin_update_physician.html
@@ -1,4 +1,4 @@
-{% extends 'admin_base.html' %}
+{% extends 'innovacare/admin_base.html' %}
 {% load widget_tweaks %}
 {% block content %}
 
@@ -53,7 +53,7 @@
   <div class="container register-form">
     <div class="form">
       <div class="note">
-        <p>Update Doctor Details</p>
+        <p>Update Physician Details</p>
       </div>
       <div class="form-content">
         <div class="row">
@@ -65,10 +65,10 @@
               {% render_field userForm.username class="form-control" placeholder="Username" %}
             </div>
             <div class="form-group">
-              {% render_field doctorForm.mobile class="form-control" placeholder="Mobile" %}
+              {% render_field physicianForm.mobile class="form-control" placeholder="Mobile" %}
             </div>
             <div class="form-group">
-              {% render_field doctorForm.department class="form-control" placeholder="Department" %}
+              {% render_field physicianForm.department class="form-control" placeholder="Department" %}
             </div>
           </div>
           <div class="col-md-6">
@@ -79,10 +79,10 @@
               {% render_field userForm.password class="form-control" placeholder="Password" %}
             </div>
             <div class="form-group">
-              {% render_field doctorForm.address class="form-control" placeholder="Address" %}
+              {% render_field physicianForm.address class="form-control" placeholder="Address" %}
             </div>
             <div class="form-group">
-              {% render_field doctorForm.profile_pic class="form-control" placeholder="Profile Picture" %}
+              {% render_field physicianForm.profile_pic class="form-control" placeholder="Profile Picture" %}
             </div>
           </div>
         </div>
