--- a/templates/innovacare/admin_add_client.html
+++ b/templates/innovacare/admin_add_client.html
@@ -69,7 +69,7 @@
               {% render_field clientForm.address class="form-control" placeholder="Address" %}
             </div>
             <div class="form-group">
-              {% render_field clientForm.symptoms class="form-control" placeholder="Symptoms" %}
+              {% render_field clientForm.health_details class="form-control" placeholder="Health Details" %}
             </div>
             <div class="form-group">
               {% render_field clientForm.profile_pic required="required" class="form-control" placeholder="Profile Picture" %}
