--- a/templates/innovacare/clientsignup.html
+++ b/templates/innovacare/clientsignup.html
@@ -94,6 +94,9 @@
               <div class="form-group">
                 {% render_field clientForm.mobile class="form-control" pattern="[6789][0-9]{9}" placeholder="Mobile Number" %}
               </div>
+              <div class="form-group"></div>
+                {% render_field clientForm.health_details class="form-control" placeholder="Health Details" %}
+              </div>
 
             </div>
           </div>
