--- a/templates/innovacare/admin_approve_client.html
+++ b/templates/innovacare/admin_approve_client.html
@@ -41,11 +41,11 @@
       <tr>
         <td> {{c.get_name}}</td>
         <td> <img src="{% static p.profile_pic.url %}" alt="Profile Pic" height="40px" width="40px" /></td>
-        <td>{{c.symptoms}}</td>
+        <td>{{c.health_details}}</td>
         <td>{{c.mobile}}</td>
         <td>{{c.address}}</td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'approve-client' c.id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'reject-client' c.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'approve-client' c.client_id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'reject-client' c.client_id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
     </table>
