--- a/templates/innovacare/admin_approve_physician.html
+++ b/templates/innovacare/admin_approve_physician.html
@@ -45,8 +45,8 @@
         <td>{{p.mobile}}</td>
         <td>{{p.address}}</td>
         <td>{{p.department}}</td>
-        <td><a class="btn btn-primary btn-xs" href="{% url 'approve-physician' p.id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
-        <td><a class="btn btn-danger btn-xs" href="{% url 'reject-physician' p.id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
+        <td><a class="btn btn-primary btn-xs" href="{% url 'approve-physician' p.physician_id  %}"><span class="glyphicon glyphicon-ok"></span></a></td>
+        <td><a class="btn btn-danger btn-xs" href="{% url 'reject-physician' p.physician_id  %}"><span class="glyphicon glyphicon-trash"></span></a></td>
       </tr>
       {% endfor %}
     </table>
